Iron Man Extremis

--- a/revenue.html
+++ b/revenue.html
@@ -17,28 +17,28 @@
 <th>Details</th>
 </tr>
 <tr>
-<td>Pokemon</td><td>1996</td><td>55.15</td><td>Pokemon</td><td><a href="Creation/Pokemon/Pokemon.html">Details</a></td>
+<td>Pokemon</td><td>1996</td><td>90.00</td><td>Pokemon</td><td><a href="Creation/Pokemon/Pokemon.html">Details</a></td>
 </tr>
 <tr>
-<td>Star Wars</td><td>1977</td><td>42.00</td><td>Disney</td><td><a href="https://blzimg.github.io/StarWars/StarWars.html">Details</a></td>
+<td>Star Wars</td><td>1977</td><td>65.00</td><td>Disney</td><td><a href="https://blzimg.github.io/StarWars/StarWars.html">Details</a></td>
 </tr>
 <tr>
-<td>Hello Kitty</td><td>1974</td><td>41.00</td><td>Sanrio</td><td>Details</td>
+<td>Hello Kitty</td><td>1974</td><td>80.00</td><td>Sanrio</td><td>Details</td>
 </tr>
 <tr>
-<td>Harry Potter (Wizarding World)</td><td>1997</td><td>25.00</td><td>AT &amp; T</td><td><a href="Creation/HarryPotter/HarryPotter.html">Details</a></td>
+<td>Harry Potter (Wizarding World)</td><td>1997</td><td>31.00</td><td>AT &amp; T</td><td><a href="Creation/HarryPotter/HarryPotter.html">Details</a></td>
 </tr>
 <tr>
-<td>Batman</td><td>1939</td><td>23.90</td><td>AT &amp; T</td><td><a href="Creation/Batman/Batman.html">Details</a></td>
+<td>Batman</td><td>1939</td><td>25.00</td><td>AT &amp; T</td><td><a href="Creation/Batman/Batman.html">Details</a></td>
 </tr>
 <tr>
 <td>James Bond</td><td>1953</td><td>19.90</td><td>MGM</td><td><a href="Creation/JamesBond/JamesBond.html">Details</a></td>
 </tr>
 <tr>
-<td>Toy Story</td><td>1995</td><td>17.10</td><td>Disney</td><td><a href="Creation/Toystory/Toystory.html">Details</a></td>
+<td>Toy Story</td><td>1995</td><td>20.40</td><td>Disney</td><td><a href="Creation/Toystory/Toystory.html">Details</a></td>
 </tr>
 <tr>
-<td>Call of Duty</td><td>2003</td><td>16.00</td><td>Activision Blizzard</td><td><a href="Creation/CallOfDuty/CallOfDuty.html">Details</a></td>
+<td>Call of Duty</td><td>2003</td><td>17.00</td><td>Activision Blizzard</td><td><a href="Creation/CallOfDuty/CallOfDuty.html">Details</a></td>
 </tr>
 <tr>
 <td>Space Invaders</td><td>1978</td><td>13.93</td><td>Square Enix</td><td><a href="Creation/SpaceInvaders/SpaceInvaders.html">Details</a></td>
@@ -47,55 +47,55 @@
 <td>Pac-Man</td><td>1980</td><td>15.10</td><td>Bandai Namco</td><td><a href="Creation/PacMan/PacMan.html">Details</a></td>
 </tr>
 <tr>
-<td>Dora the Explorer</td><td>2000</td><td>14.80</td><td>Nickelodeon</td><td><a href="Creation/DoraTheExplorer/DoraTheExplorer.html">Details</a></td>
+<td>Dora the Explorer</td><td>2000</td><td>15.70</td><td>Nickelodeon</td><td><a href="Creation/DoraTheExplorer/DoraTheExplorer.html">Details</a></td>
 </tr>
 <tr>
-<td>Marvel Cinematic Universe</td><td>2008</td><td>13.16</td><td>Disney</td><td><a href="Creation/MarvelCinematicUniverse/mcu.html">Details</a></td>
+<td>Marvel Cinematic Universe</td><td>2008</td><td>33.60</td><td>Disney</td><td><a href="Creation/MarvelCinematicUniverse/mcu.html">Details</a></td>
 </tr>
 <tr>
-<td>Simpsons</td><td>1989</td><td>13.00</td><td>Fox</td><td><a href="Creation/Simpsons/Simpsons.html">Details</a></td>
+<td>Simpsons</td><td>1989</td><td>15.30</td><td>Disney</td><td><a href="Creation/Simpsons/Simpsons.html">Details</a></td>
 </tr>
 <tr>
-<td>SpongeBob SquarePants</td><td>1999</td><td>12.50</td><td>Nickelodeon</td><td><a href="Creation/SpongeBobSquarePants/SpongeBobSquarePants.html">Details</a></td>
+<td>SpongeBob SquarePants</td><td>1999</td><td>14.10</td><td>Nickelodeon</td><td><a href="Creation/SpongeBobSquarePants/SpongeBobSquarePants.html">Details</a></td>
 </tr>
 <tr>
-<td>Cars</td><td>2006</td><td>14.80</td><td>Disney</td><td><a href="Creation/Cars/Cars.html">Details</a></td>
+<td>Cars</td><td>2006</td><td>21.80</td><td>Disney</td><td><a href="Creation/Cars/Cars.html">Details</a></td>
 </tr>
 <tr>
 <td>Street Fighter</td><td>1987</td><td>11.50</td><td>Capcom</td><td><a href="Creation/StreetFighter/StreetFighter.html">Details</a></td>
 </tr>
 <tr>
-<td>Lion King</td><td>1994</td><td>13.60</td><td>Disney</td><td><a href="Creation/LionKing/LionKing.html">Details</a></td>
+<td>Lion King</td><td>1994</td><td>14.30</td><td>Disney</td><td><a href="Creation/LionKing/LionKing.html">Details</a></td>
 </tr>
 <tr>
-<td>Star Trek</td><td>1966</td><td>10.00</td><td>CBS</td><td><a href="Creation/StarTrek/StarTrek.html">Details</a></td>
+<td>Star Trek</td><td>1966</td><td>10.60</td><td>CBS</td><td><a href="Creation/StarTrek/StarTrek.html">Details</a></td>
 </tr>
 <tr>
-<td>Warcraft</td><td>1994</td><td>10.40</td><td>Activision Blizzard</td><td><a href="https://blzimg.github.io/Warcraft/Warcraft.html">Details</a></td>
+<td>Warcraft</td><td>1994</td><td>11.10</td><td>Activision Blizzard</td><td><a href="https://blzimg.github.io/Warcraft/Warcraft.html">Details</a></td>
 </tr>
 <tr>
-<td>Dungeon Fighter Online</td><td>2005</td><td>10.50</td><td>Nexon</td><td><a href="Creation/DungeonFighterOnline/DFO.html">Details</a></td>
+<td>Dungeon Fighter Online</td><td>2005</td><td>11.80</td><td>Nexon</td><td><a href="Creation/DungeonFighterOnline/DFO.html">Details</a></td>
 </tr>
 <tr>
-<td>Transformers</td><td>1984</td><td>14.40</td><td>Hasbro, Tomy</td><td><a href="Creation/Transformers/Transformers.html">Details</a></td>
+<td>Transformers</td><td>1984</td><td>17.20</td><td>Hasbro, Tomy</td><td><a href="Creation/Transformers/Transformers.html">Details</a></td>
 </tr>
 <tr>
-<td>Ultraman</td><td>1966</td><td>08.88</td><td>Tsuburaya Productions</td><td><a href="Creation/Ultraman/Ultraman.html">Details</a></td>
+<td>Ultraman</td><td>1966</td><td>11.60</td><td>Tsuburaya Productions</td><td><a href="Creation/Ultraman/Ultraman.html">Details</a></td>
 </tr>
 <tr>
-<td>Teenage Mutant Ninja Turtles</td><td>1984</td><td>10.00</td><td>Nickelodeon</td><td><a href="Creation/TMNT/TMNT.html">Details</a></td>
+<td>Teenage Mutant Ninja Turtles</td><td>1984</td><td>12.70</td><td>Nickelodeon</td><td><a href="Creation/TMNT/TMNT.html">Details</a></td>
 </tr>
 <tr>
-<td>Mario</td><td>1981</td><td>26.30</td><td>Nintendo</td><td><a href="Creation/Mario/Mario.html">Details</a></td>
+<td>Mario</td><td>1981</td><td>36.00</td><td>Nintendo</td><td><a href="Creation/Mario/Mario.html">Details</a></td>
 </tr>
 <tr>
 <td>Power Rangers</td><td>1993</td><td>09.30</td><td>Saban, Toei</td><td><a href="Creation/PowerRangers/PowerRangers.html">Details</a></td>
 </tr>
 <tr>
-<td>Spider-Man</td><td>1962</td><td>20.10</td><td>Disney</td><td><a href="Creation/SpiderMan/SpiderMan.html">Details</a></td>
+<td>Spider-Man</td><td>1962</td><td>28.00</td><td>Disney</td><td><a href="Creation/SpiderMan/SpiderMan.html">Details</a></td>
 </tr>
 <tr>
-<td>Mickey Mouse</td><td>1928</td><td>06.00</td><td>Disney</td><td><a href="Creation/MickeyMouse/MickeyMouse.html">Details</a></td>
+<td>Mickey Mouse</td><td>1928</td><td>70.00</td><td>Disney</td><td><a href="Creation/MickeyMouse/MickeyMouse.html">Details</a></td>
 </tr>
 <tr>
 <td>Pirates of the Caribbean</td><td>1967</td><td>06.90</td><td>Disney</td><td><a href="Creation/PiratesOfTheCaribbean/PiratesOfTheCaribbean.html">Details</a></td>
@@ -104,25 +104,25 @@
 <td>Ice Age</td><td>2002</td><td>06.00</td><td>Fox</td><td><a href="Creation/IceAge/IceAge.html">Details</a></td>
 </tr>
 <tr>
-<td>Middle Earth</td><td>1937</td><td>19.80</td><td>AT &amp; T</td><td><a href="Creation/MiddleEarth/MiddleEarth.html">Details</a></td>
+<td>Middle Earth</td><td>1937</td><td>19.90</td><td>AT &amp; T</td><td><a href="Creation/MiddleEarth/MiddleEarth.html">Details</a></td>
 </tr>
 <tr>
-<td>Disney Princess</td><td>2000</td><td>09.50</td><td>Disney</td><td><a href="Creation/DisneyPrincess/DisneyPrincess.html">Details</a></td>
+<td>Disney Princess</td><td>2000</td><td>45.00</td><td>Disney</td><td><a href="Creation/DisneyPrincess/DisneyPrincess.html">Details</a></td>
 </tr>
 <tr>
-<td>Dragon Ball</td><td>1984</td><td>13.60</td><td>Toei</td><td><a href="Creation/Dragonball/Dragonball.html">Details</a></td>
+<td>Dragon Ball</td><td>1984</td><td>24.30</td><td>Toei</td><td><a href="Creation/Dragonball/Dragonball.html">Details</a></td>
 </tr>
 <tr>
 <td>Shrek</td><td>2001</td><td>05.10</td><td>Comcast</td><td><a href="Creation/Shrek/Shrek.html">Details</a></td>
 </tr>
 <tr>
-<td>Gundam</td><td>1979</td><td>16.10</td><td>Sunrise</td><td><a href="Creation/Gundam/Gundam.html">Details</a></td>
+<td>Gundam</td><td>1979</td><td>26.00</td><td>Sunrise</td><td><a href="Creation/Gundam/Gundam.html">Details</a></td>
 </tr>
 <tr>
 <td>Sonic the Hedgehog</td><td>1991</td><td>07.23</td><td>Sega</td><td><a href="Creation/SonicTheHedgehog/SonicTheHedgehog.html">Details</a></td>
 </tr>
 <tr>
-<td>Yu-Gi-Oh!</td><td>1996</td><td>14.30</td><td>Kazuki Takahashi Shueisha</td><td><a href="https://blzimg.github.io/YuGiOh/YuGiOh.html">Details</a></td>
+<td>Yu-Gi-Oh!</td><td>1996</td><td>19.80</td><td>Kazuki Takahashi Shueisha</td><td><a href="https://blzimg.github.io/YuGiOh/YuGiOh.html">Details</a></td>
 </tr>
 <tr>
 <td>Jurassic Park</td><td>1993</td><td>07.07</td><td>Comcast</td><td><a href="Creation/JurassicPark/JurassicPark.html">Details</a></td>
@@ -140,7 +140,7 @@
 <td>Beyblade</td><td>1999</td><td>04.60</td><td>Shogakukan</td><td><a href="Creation/Beyblade/Beyblade.html">Details</a></td>
 </tr>
 <tr>
-<td>Ben 10</td><td>2005</td><td>04.50</td><td>AT &amp; T</td><td><a href="Creation/Ben10/Ben10.html">Details</a></td>
+<td>Ben 10</td><td>2005</td><td>07.85</td><td>AT &amp; T</td><td><a href="Creation/Ben10/Ben10.html">Details</a></td>
 </tr>
 <tr>
 <td>Seinfeld</td><td>1989</td><td>04.06</td><td>Comcast</td><td><a href="Creation/Seinfeld/Seinfeld.html">Details</a></td>
@@ -164,7 +164,7 @@
 <td>G.I. Joe</td><td>1964</td><td>03.40</td><td>Hasbro</td><td><a href="Creation/GIJoe/GIJoe.html">Details</a></td>
 </tr>
 <tr>
-<td>Sailor Moon</td><td>1991</td><td>05.97</td><td>Toei</td><td><a href="Creation/SailorMoon/SailorMoon.html">Details</a></td>
+<td>Sailor Moon</td><td>1991</td><td>14.30</td><td>Toei</td><td><a href="Creation/SailorMoon/SailorMoon.html">Details</a></td>
 </tr>
 <tr>
 <td>Gran Turismo</td><td>1997</td><td>02.50</td><td>Sony</td><td><a href="Creation/GranTurismo/GranTurismo.html">Details</a></td>
@@ -179,10 +179,10 @@
 <td>Winx Club</td><td>2004</td><td>02.50</td><td>Rainbow S.r.l.</td><td><a href="https://blzimg.github.io/Winx/Winx.html">Details</a></td>
 </tr>
 <tr>
-<td>Superman</td><td>1938</td><td>06.20</td><td>AT &amp; T</td><td><a href="Creation/Superman/Superman.html">Details</a></td>
+<td>Superman</td><td>1938</td><td>11.10</td><td>AT &amp; T</td><td><a href="Creation/Superman/Superman.html">Details</a></td>
 </tr>
 <tr>
-<td>Neon Genesis Evangelion</td><td>1994</td><td>14.90</td><td>Gainax</td><td><a href="Creation/NeonGenesis/NeonGenesis.html">Details</a><td>
+<td>Neon Genesis Evangelion</td><td>1994</td><td>16.30</td><td>Khara</td><td><a href="Creation/NeonGenesis/NeonGenesis.html">Details</a><td>
 </tr>
 <tr>
 <td>Yo-kai Watch</td><td>2013</td><td>02.00</td><td>Level 5, Nintendo</td><td><a href="https://blzimg.github.io/YokaiWatch/YokaiWatch.html">Details</a></td>
@@ -203,7 +203,7 @@
 <td>Resident Evil</td><td>1996</td><td>05.17</td><td>Capcom</td><td><a href="Creation/ResidentEvil/ResidentEvil.html">Details</a></td>
 </tr>
 <tr>
-<td>One Piece</td><td>1997</td><td>07.13</td><td>Eiichiro Oda Shueisha</td><td><a href="Creation/OnePiece/OnePiece.html">Details</a></td>
+<td>One Piece</td><td>1997</td><td>21.00</td><td>Eiichiro Oda</td><td><a href="Creation/OnePiece/OnePiece.html">Details</a></td>
 </tr>
 <tr>
 <td>Doraemon</td><td>1969</td><td>01.14</td><td>Shogakukan</td><td><a href="Creation/Doraemon/Doraemon.html">Details</a></td>
@@ -227,10 +227,10 @@
 <td>Fist of the North Star</td><td>1983</td><td>18.30</td><td>Toei, Sega</td><td>Details</td>
 </tr>
 <tr>
-<td>Barbie</td><td>1959</td><td>11.80</td><td>Mattel</td><td>Details</td>
+<td>Barbie</td><td>1959</td><td>24.00</td><td>Mattel</td><td>Details</td>
 </tr>
 <tr>
-<td>Final Fantasy</td><td>1987</td><td>10.50</td><td>Square Enix</td><td>Details</td>
+<td>Final Fantasy</td><td>1987</td><td>11.90</td><td>Square Enix</td><td>Details</td>
 </tr>
 <tr>
 <td>Grand Theft Auto</td><td>1987</td><td>08.56</td><td>Rockstar Games</td><td>Details</td>
@@ -251,10 +251,10 @@
 <td>Twilight</td><td>2005</td><td>06.15</td><td>Summit</td><td>Details</td>
 </tr>
 <tr>
-<td>Aladdin</td><td>1992</td><td>05.71</td><td>Disney</td><td>Details</td>
+<td>Aladdin</td><td>1992</td><td>06.85</td><td>Disney</td><td>Details</td>
 </tr>
 <tr>
-<td>Shonen Jump</td><td>1968</td><td>18.80</td><td>Bandai Namco</td><td>Details</td>
+<td>Shonen Jump</td><td>1968</td><td>34.20</td><td>Bandai Namco</td><td>Details</td>
 </tr>
 <tr>
 <td>Puzzle &amp; Dragons</td><td>2012</td><td>06.10</td><td>GungHo Online</td><td>Details</td>
@@ -266,7 +266,7 @@
 <td>League of Legens</td><td>2009</td><td>05.69</td><td>Tencent Games</td><td>Details</td>
 </tr>
 <tr>
-<td>Dragon Quest</td><td>1986</td><td>05.61</td><td>Square Enix</td><td>Details</td>
+<td>Dragon Quest</td><td>1986</td><td>12.70</td><td>Square Enix</td><td>Details</td>
 </tr>
 <tr>
 <td>Fast &amp; Furious</td><td>2001</td><td>05.59</td><td>Comcast</td><td>Details</td>
@@ -275,7 +275,7 @@
 <td>Westward Journey</td><td>2001</td><td>05.55</td><td>NetEase</td><td>Details</td>
 </tr>
 <tr>
-<td>Frozen</td><td>2013</td><td>05.43</td><td>Disney</td><td>Details</td>
+<td>Frozen</td><td>2013</td><td>11.30</td><td>Disney</td><td>Details</td>
 </tr>
 <tr>
 <td>Monster Strike</td><td>2013</td><td>04.73</td><td>Mixi</td><td>Details</td>
@@ -299,10 +299,10 @@
 <td>Candy Crush</td><td>2012</td><td>03.68</td><td>Activision Blizzard</td><td>Details</td>
 </tr>
 <tr>
-<td>Friends</td><td>1994</td><td>03.67</td><td>Bright/Kauffman/Crane</td><td>Details</td>
+<td>Friends</td><td>1994</td><td>03.67</td><td>Bright/Kauffman</td><td>Details</td>
 </tr>
 <tr>
-<td>Angry Birds</td><td>2009</td><td>03.64</td><td>Rovio</td><td>Details</td>
+<td>Angry Birds</td><td>2009</td><td>08.78</td><td>Rovio</td><td>Details</td>
 </tr>
 <tr>
 <td>Lego Movie</td><td>2014</td><td>03.57</td><td>AT &amp; T</td><td>Details</td>
@@ -313,6 +313,37 @@
 <tr>
 <td>Power Puff Girls</td><td>1998</td><td>02.50</td><td>AT &amp; T</td><td>Details</td>
 </tr>
+<tr>
+<td>Winnie the Pooh</td><td>1924</td><td>75.00</td><td>Disney</td><td>Details</td>
+</tr>
+<tr>
+<td>Anpanman</td><td>1973</td><td>60.00</td><td>Froebel-kan</td><td>Details</td>
+</tr>
+<tr>
+<td>Game of Thrones</td><td>1996</td><td>05.81</td><td>AT &amp; T</td><td>Details</td>
+</tr>
+<tr>
+<td>Avengers</td><td>1963</td><td>13.40</td><td>Disney</td><td>Details</td>
+</tr>
+<tr>
+<td>Bleach</td><td>2001</td><td>07.24</td><td>Shueisha</td><td>Details</td>
+</tr>
+<tr>
+<td>Bob the Builder</td><td>1998</td><td>05.00</td><td>DHX Media</td><td>Details</td>
+</tr>
+<tr>
+<td>Peanuts</td><td>1950</td><td>17.40</td><td>DHX Media</td><td>Details</td>
+</tr>
+<tr>
+<td>Looney Tunes</td><td>1930</td><td>14.30</td><td>AT &amp; T</td><td>Details</td>
+</tr>
+<tr>
+<td>Cross Fire</td><td>2007</td><td>10.60</td><td>Smilegate</td><td>Details</td>
+</tr>
+<tr>
+<td>Naruto</td><td>1999</td><td>10.10</td><td>Shueisha</td><td>Details</td>
+</tr>
+
 
 </table>
 
