--- a/index.html
+++ b/index.html
@@ -5418,6 +5418,14 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Flash Rebirth</td>
+<td>2009</td>
+<td>DC</td>
+<td><a href="FlashRebirth/FlashRebirth.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Flight of Angels</td>
 <td>2011</td>
 <td>Vertigo</td>
