--- a/index.html
+++ b/index.html
@@ -10325,6 +10325,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Planet Hulk</td>
+<td>2006</td>
+<td>Marvel</td>
+<td><a href="PlanetHulk/PlanetHulk.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Planet of Apes</td>
 <td>1963</td>
 <td>Fox</td>
