Kraven's Last Hunt

--- a/index.html
+++ b/index.html
@@ -7672,6 +7672,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Kraven's Last Hunt</td>
+<td>1987</td>
+<td>Marvel</td>
+<td><a href="KravensLastHunt/KravensLastHunt.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Krazy Komics</td>
 <td>1942</td>
 <td>Timely</td>
