--- a/index.html
+++ b/index.html
@@ -4148,6 +4148,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>David Bowie</td>
+<td>1947</td>
+<td>Creator</td>
+<td><a href="DavidBowie/DavidBowie.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Day of the Defenders</td>
 <td>2001</td>
 <td>Marvel</td>
