--- a/DavidBowie/DavidBowie.html
+++ b/DavidBowie/DavidBowie.html
@@ -19,42 +19,85 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Bowie1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie9.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie14.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie15.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie16.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie17.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie18.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie19.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie20.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie21.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie22.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie23.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie24.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Bowie25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie2.jpg" title="1967"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie3.jpg" title="1969"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie6.jpg" title="1970"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie7.jpg" title="1970"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie5.jpg" title="1971"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie4.jpg" title="1972"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie8.jpg" title="1972"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie9.jpg" title="1972"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie1.jpg" title="1973"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie10.jpg" title="1973"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie11.jpg" title="1973"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie18.jpg" title="1974"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie14.jpg" title="1975"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie17.jpg" title="1975"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie15.jpg" title="1976"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie19.jpg" title="1976"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie26.jpg" title="1976"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie13.jpg" title="1977"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie16.jpg" title="1977"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie25.jpg" title="1978"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie27.jpg" title="1979"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie12.jpg" title="1980"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie20.jpg" title="1983"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie22.jpg" title="1984"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie28.jpg" title="1987"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie29.jpg" title="1993"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie30.jpg" title="1995"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie24.jpg" title="1997"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie31.jpg" title="1999"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie21.jpg" title="2002"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie23.jpg" title="2002"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie32.jpg" title="2003"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie33.jpg" title="2013"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bowie34.jpg" title="2016"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 
 </p><p>
-David Robert Jones (8 January 1947 – 10 January 2016), known professionally as David Bowie, was an English singer-songwriter and actor. He was a leading figure in the music industry and is considered one of the most influential musicians of the 20th century, acclaimed by critics and musicians, particularly for his innovative work during the 1970s. His career was marked by reinvention and visual presentation, with his music and stagecraft having a significant impact on popular music. During his lifetime, his record sales, estimated at 140 million albums worldwide, made him one of the world's best-selling music artists. In the UK, he was awarded ten platinum album certifications, eleven gold and eight silver, and released eleven number-one albums. In the US, he received five platinum and nine gold certifications. He was inducted into the Rock and Roll Hall of Fame in 1996.
+David Robert Jones (8 January 1947 – 10 January 2016), known professionally as David Bowie, was an English singer-songwriter and actor. He was a leading figure in the music industry and is considered one of the most influential musicians of the 20th century, acclaimed by critics and musicians, particularly for his innovative work during the 1970s. 
 </p><p>
-Born in Brixton, South London, Bowie developed an interest in music as a child, eventually studying art, music and design before embarking on a professional career as a musician in 1963. "Space Oddity" became his first top-five entry on the UK Singles Chart after its release in July 1969. After a period of experimentation, he re-emerged in 1972 during the glam rock era with his flamboyant and androgynous alter ego Ziggy Stardust. The character was spearheaded by the success of his single "Starman" and album The Rise and Fall of Ziggy Stardust and the Spiders from Mars, which won him widespread popularity. In 1975, Bowie's style shifted radically towards a sound he characterised as "plastic soul", initially alienating many of his UK devotees but garnering him his first major US crossover success with the number-one single "Fame" and the album Young Americans. In 1976, Bowie starred in the cult film The Man Who Fell to Earth, directed by Nicolas Roeg, and released Station to Station. The following year, he further confounded musical expectations with the electronic-inflected album Low (1977), the first of three collaborations with Brian Eno that came to be known as the "Berlin Trilogy". "Heroes" (1977) and Lodger (1979) followed; each album reached the UK top five and received lasting critical praise.
+His career was marked by reinvention and visual presentation, with his music and stagecraft having a significant impact on popular music. During his lifetime, his record sales, estimated at 140 million albums worldwide, made him one of the world's best-selling music artists. In the UK, he was awarded ten platinum album certifications, eleven gold and eight silver, and released eleven number-one albums. In the US, he received five platinum and nine gold certifications. He was inducted into the Rock and Roll Hall of Fame in 1996.
 </p><p>
-After uneven commercial success in the late 1970s, Bowie had UK number ones with the 1980 single "Ashes to Ashes", its parent album Scary Monsters (and Super Creeps), and "Under Pressure", a 1981 collaboration with Queen. He reached his commercial peak in 1983 with Let's Dance; the album's title track topped both UK and US charts. Throughout the 1990s and 2000s, Bowie continued to experiment with musical styles, including industrial and jungle. He also continued acting; his roles included Major Jack Celliers in Merry Christmas, Mr. Lawrence (1983), Jareth the Goblin King in Labyrinth (1986), Pontius Pilate in The Last Temptation of Christ (1988), and Nikola Tesla in The Prestige (2006), among other film and television appearances and cameos. He stopped touring after 2004 and his last live performance was at a charity event in 2006. In 2013, Bowie returned from a decade-long recording hiatus with The Next Day. He remained musically active until he died of liver cancer two days after the release of his final album, Blackstar (2016).
+Born in Brixton, South London, Bowie developed an interest in music as a child, eventually studying art, music and design before embarking on a professional career as a musician in 1963. "Space Oddity" became his first top-five entry on the UK Singles Chart after its release in July 1969. After a period of experimentation, he re-emerged in 1972 during the glam rock era with his flamboyant and androgynous alter ego Ziggy Stardust. The character was spearheaded by the success of his single "Starman" and album The Rise and Fall of Ziggy Stardust and the Spiders from Mars, which won him widespread popularity. 
+</p><p>
+In 1975, Bowie's style shifted radically towards a sound he characterised as "plastic soul", initially alienating many of his UK devotees but garnering him his first major US crossover success with the number-one single "Fame" and the album Young Americans. In 1976, Bowie starred in the cult film The Man Who Fell to Earth, directed by Nicolas Roeg, and released Station to Station. The following year, he further confounded musical expectations with the electronic-inflected album Low (1977), the first of three collaborations with Brian Eno that came to be known as the "Berlin Trilogy". "Heroes" (1977) and Lodger (1979) followed; each album reached the UK top five and received lasting critical praise.
+</p><p>
+After uneven commercial success in the late 1970s, Bowie had UK number ones with the 1980 single "Ashes to Ashes", its parent album Scary Monsters (and Super Creeps), and "Under Pressure", a 1981 collaboration with Queen. He reached his commercial peak in 1983 with Let's Dance; the album's title track topped both UK and US charts. Throughout the 1990s and 2000s, Bowie continued to experiment with musical styles, including industrial and jungle. He also continued acting; his roles included Major Jack Celliers in Merry Christmas, Mr. Lawrence (1983), Jareth the Goblin King in Labyrinth (1986), Pontius Pilate in The Last Temptation of Christ (1988), and Nikola Tesla in The Prestige (2006), among other film and television appearances and cameos. 
+</p><p>
+He stopped touring after 2004 and his last live performance was at a charity event in 2006. In 2013, Bowie returned from a decade-long recording hiatus with The Next Day. He remained musically active until he died of liver cancer two days after the release of his final album, Blackstar (2016).
+</p><p>
+Studio albums<br>
+<li>David Bowie (1967)
+<li>David Bowie (re-released as Space Oddity in 1972) (1969)
+<li>The Man Who Sold the World (1970)
+<li>Hunky Dory (1971)
+<li>The Rise and Fall of Ziggy Stardust and the Spiders from Mars (1972)
+<li>Aladdin Sane (1973)
+<li>Pin Ups (1973)
+<li>Diamond Dogs (1974)
+<li>Young Americans (1975)
+<li>Station to Station (1976)
+<li>Low (1977)
+<li>Heroes (1977)
+<li>Lodger (1979)
+<li>Scary Monsters (and Super Creeps) (1980)
+<li>Let's Dance (1983)
+<li>Tonight (1984)
+<li>Never Let Me Down (1987)
+<li>Black Tie White Noise (1993)
+<li>Outside (1995)
+<li>Earthling (1997)
+<li>Hours (1999)
+<li>Heathen (2002)
+<li>Reality (2003)
+<li>The Next Day (2013)
+<li>Blackstar (2016)
 </p>
+
 </body>
 </html>
