--- a/index.html
+++ b/index.html
@@ -10821,8 +10821,8 @@ Creative Knowledgebase<br>
 
 <tr>
 <td>Residents</td>
-<td>1996</td>
-<td>Creator</td>
+<td>1969</td>
+<td>Ralph Records</td>
 <td><a href="Residents/Residents.html">Details</a></td>
 </tr>
 
