--- a/2001ASpaceOdyssey/2001ASpaceOdyssey.html
+++ b/2001ASpaceOdyssey/2001ASpaceOdyssey.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-<img src="2001ASpaceOdyssey.jpg"><br>
-10 issues, 1 Treasury Edition, 1976 by Marvel<br>
-Illustrated and written by Jack Kirby
+<img src="2001Movie.jpg"><br>
+1 Movie in 1968 by MGM<br>
+10 issues, 1 Treasury Edition, 1976 by Marvel
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -38,8 +38,6 @@ Illustrated and written by Jack Kirby
 
 </p><p>
 2001 A Space Odyssey is the adaptation of the 1968 film of the same name as well as a ten–issue monthly series which expanded upon the concepts presented in the Stanley Kubrick film and the novel by Arthur C. Clarke. Jack Kirby wrote and pencilled both the adaptation and the series, which were published by Marvel Comics beginning in 1976. The adaptation was part of the agreement of Kirby's return to Marvel.
-</p><p>
-Marvel published the adaptation in its then-common treasury edition format featuring tabloid-sized pages of roughly twice the size of a normal comic book.
 </p><p>
 Kirby continued to explore the concepts of 2001 in a monthly comic book series of the same name, the first issue of which was cover dated December 1976. In this issue, Kirby followed the pattern established in the film. Once again the reader encounters a prehistoric man ("Beast-Killer") who gains new insight upon encountering a monolith as did Moon-Watcher in the film. The scene then shifts, where a descendant of Beast-Killer is part of a space mission to explore yet another monolith. When he finds it, this monolith begins to transform the astronaut into a star child, called in the comic a "New Seed".
 </p><p>
