--- a/KaZar/KaZar.html
+++ b/KaZar/KaZar.html
@@ -2,21 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Ka-Zar</title>
 </head>
 
 <body>
-Ka-Zar<br>
-<img src="KaZarPulpMag001.jpg"> <br>
-Series: 3 pulp mag issues 1936-1937. 20 issues 1974, 1977. 34 issues 1981-1984. 20 issue 1997-1998. 5 issues 2011.<br>
-Publisher: Marvel<br>
+<img src="KaZarPulpMag1.jpg"> <br>
+3 pulp mag issues 1936-1937. 3 issues in 1970, 20 issues from 1974-1977, 34 issues from 1981-1984, 20 issues from 1997-1998, 5 issues in 2011 by Marvel<br>
 <p>
-Ka-Zar (pronunciation: KAY-sar) is the name of two jungle-dwelling fictional comic book characters published in the United States. The first Ka-Zar was named David Rand, and debuted in 1936, first appearing in pulp magazines of the 1930s. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="KaZarPulpMag1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KaZar09.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-In 1939 he was adapted for his second iteration, a comic book character for Timely Comics, the 1930s and 1940s predecessor of Marvel Comics. The second and more prominent Ka-Zar was named Kevin Plunder, and first appeared in 1965. He is a heroic character appearing in American comic books published by Marvel Comics.
+Ka-Zar ("KAY-sar") is the name of two jungle-dwelling fictional comic book characters published in the United States. The first Ka-Zar was named David Rand, and debuted in 1936, first appearing in pulp magazines of the 1930s. 
 </p><p>
-<img src="KaZar001.jpg">
+In 1939 he was adapted for his second iteration, a comic book character for Timely Comics, the 1930s and 1940s predecessor of Marvel Comics (<a href="../MarvelComics/marvelcomics.html">Marvel Comics #1</a>). The second and more prominent Ka-Zar was named Kevin Plunder, and first appeared in 1965 (<a href="../Xmen/Xmen.html">X-Men #10</a>). 
 </p><p>
 The second Ka-Zar started as a similar character, but reminiscent of both Tarzan and of writer-artist Joe Kubert's 1950s caveman character, Tor. Created by Stan Lee and Jack Kirby in The X-Men #10 (March 1965), he lives in the dinosaur-populated Savage Land, which was hidden beneath Antarctica by extraterrestrials. The character was based on his pulp magazine namesake only to the extent that he used the same name and rough "jungle lord" concept, and Lee has admitted that he had never even read any of the original Ka-Zar stories.
 </p><p>
