--- a/index.html
+++ b/index.html
@@ -832,6 +832,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Alan Moore</td>
+<td>1953</td>
+<td>Creator</td>
+<td><a href="AlanMoore/AlanMoore.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alan Watts</td>
 <td>1915</td>
 <td>Creator</td>
