--- a/index.html
+++ b/index.html
@@ -4821,6 +4821,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Duncan the Wonder Dog</td>
+<td>2010</td>
+<td>AdHouse Books</td>
+<td><a href="DuncanTheWonderDog/DuncanTheWonderDog.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dune</td>
 <td>1965</td>
 <td>Chilton Books</td>
