--- a/index.html
+++ b/index.html
@@ -7771,6 +7771,20 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Land of the Lost</td>
+<td>1943</td>
+<td>ABC</td>
+<td><a href="LandOfTheLost/LandOfTheLost.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Land of the Lost</td>
+<td>1974</td>
+<td>NBC</td>
+<td><a href="LandOfTheLostTV/LandOfTheLostTV.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Larry Gonick</td>
 <td>1946</td>
 <td>Creator</td>
