--- a/index.html
+++ b/index.html
@@ -6945,6 +6945,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Incredible Science Fiction</td>
+<td>1955</td>
+<td>EC</td>
+<td><a href="IncredibleSF/IncredibleSF.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Independence Day</td>
 <td>1996</td>
 <td>Marvel</td>
