--- a/index.html
+++ b/index.html
@@ -10221,6 +10221,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Pacific Presents</td>
+<td>1984</td>
+<td>PC</td>
+<td><a href="PacificPresents/PacificPresents.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Palookaville</td>
 <td>1991</td>
 <td>Drawn &amp; Quarterly</td>
