--- a/index.html
+++ b/index.html
@@ -378,6 +378,13 @@
 </tr>
 
 <tr>
+<td>Absolute Vertigo</td>
+<td>1995</td>
+<td>Vertigo</td>
+<td><a href="AbsoluteVertigo/AbsoluteVertigo.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adam Hughes</td>
 <td>1967</td>
 <td>Creator</td>
@@ -2577,6 +2584,13 @@
 <td>1916</td>
 <td>Creator</td>
 <td><a href="BobOksner/BobOksner.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bogeyman</td>
+<td>1969</td>
+<td>SFCC</td>
+<td><a href="RoryHayes/RoryHayes.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11076,6 +11090,13 @@
 <td>1937</td>
 <td>Creator</td>
 <td><a href="RonCobb/RonCobb.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rory Hayes</td>
+<td>1969</td>
+<td>Creator</td>
+<td><a href="RoryHayes/RoryHayes.html">Details</a></td>
 </tr>
 
 <tr>
