--- a/Deadman/Deadman.html
+++ b/Deadman/Deadman.html
@@ -30,6 +30,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Deadman09.jpg" title="cover by Jose Luis Garcia-Lopez"></div>
 <div class="mySlides" style="text-align: center;"><img src="Deadman10.jpg" title="cover by Jose Luis Garcia-Lopez"></div>
 <div class="mySlides" style="text-align: center;"><img src="Deadman11.jpg" title="cover by Jose Luis Garcia-Lopez"></div>
+<div class="mySlides" style="text-align: center;"><img src="Deadman12.jpg" title="cover by John Watkiss"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
