--- a/index.html
+++ b/index.html
@@ -5972,6 +5972,13 @@
 </tr>
 
 <tr>
+<td>Ghosts</td>
+<td>1971</td>
+<td>DC</td>
+<td><a href="Ghosts/Ghosts.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Giant Size Creatures</td>
 <td>1974</td>
 <td>Marvel</td>
@@ -10687,6 +10694,13 @@
 </tr>
 
 <tr>
+<td>Punch</td>
+<td>1941</td>
+<td>Chesler</td>
+<td><a href="Punch/Punch.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Punisher</td>
 <td>1985</td>
 <td>Marvel</td>
@@ -11783,6 +11797,13 @@
 <td>2008</td>
 <td>Marvel</td>
 <td><a href="Skaar/Skaar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Skeleton Hand</td>
+<td>1952</td>
+<td>ACG</td>
+<td><a href="SkeletonHand/SkeletonHand.html">Details</a></td>
 </tr>
 
 <tr>
