--- a/ThingFromAnotherWorld/ThingFromAnotherWorld.html
+++ b/ThingFromAnotherWorld/ThingFromAnotherWorld.html
@@ -32,6 +32,7 @@ Publisher: Dark Horse<br>
 <div class="mySlides" style="text-align: center;"><img src="ThingFromAnotherWorld8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ThingFromAnotherWorld9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ThingFromAnotherWorld10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ThingFromAnotherWorld11.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
