--- a/IronFistWolverine/IronFistWolverine.html
+++ b/IronFistWolverine/IronFistWolverine.html
@@ -2,29 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Iron Fist Wolverine</title>
 </head>
 
 <body>
-Iron Fist Wolverine<br>
 <img src="IronFistWolverine1.jpg"> <br>
-Series: 4 issues 2000<br>
-Publisher: Marvel<br>
-Written by Jay Faerber<br>
-Illustrations by Jamal Igle<br>
+4 issues in 2000 by Marvel<br>
+Written by Jay Faerber, Illustrations by Jamal Igle
 <p>
-After his love Misty Knight is captured by The Hand, Iron Fist must travel to Tokyo to kick ninja tail. Danny Rand is hot on the trail of Junzo Moto, the young ninja that stole away the power of the Iron Fist!  Meanwhile, Wolverine is investigating the recent resurgence of Hand activity in Tokyo where Junzo is attempting to bring about the return of the supernatural city of K'un Lun!
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="IronFistWolverine1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFistWolverine2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFistWolverine3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFistWolverine4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-<img src="IronFistWolverine2.jpg">
+After his love Misty Knight is captured by The Hand, Iron Fist must travel to Tokyo to kick ninja tail. Danny Rand is hot on the trail of Junzo Moto, the young ninja that stole away the power of the Iron Fist!  Meanwhile, Wolverine is investigating the recent resurgence of Hand activity in Tokyo where Junzo is attempting to bring about the return of the supernatural city of K'un Lun!
 </p><p>
 The mystical city of K'un L'un has returned, right in the middle of Tokyo! Can anyone stop Junzo Muto (the kid who stole the power of Iron Fist from Danny Rand) from taking over the world? Wolverine, Captain America and S.H.I.E.L.D. sure are gonna try!
 </p><p>
-<img src="IronFistWolverine3.jpg">
-</p><p>
 Junzo Muto, young leader of The Hand, empowered with the Iron Fist force! After stealing Daniel Rand’s inner chi, Muto seems well on his way to becoming the new leader of K’un-Lun/Tokyo. But when Wolverine and Earth’s Mightiest break the mystic barriers between themselves and Muto, all bets are off! Will Iron Fist and Misty Knight be rescued at long last?
-</p><p>
-<img src="IronFistWolverine4.jpg">
 </p><p>
 Will Iron Fist make the ultimate sacrifice? Will Wolverine kick the snot out of young upstart Junzo Muto? Will Captain America, Iron Man, Psylocke, Power Man, Sunfire and S.H.I.E.L.D. get fried by a squadron of dragons? Find out in the action-packed finale!
 </p>
