--- a/BlackGoliath/BlackGoliath.html
+++ b/BlackGoliath/BlackGoliath.html
@@ -2,15 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Black Goliath</title>
 </head>
 
 <body>
 <img src="BlackGoliath.jpg"> <br>
-5 issues 1976 Marvel<br>
+5 issues in 1976 by Marvel<br>
 Illustrator: George Tuska, Ron Wilson (cover), Writer: Tony Isabella
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BlackGoliath.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackGoliath2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackGoliath3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackGoliath4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackGoliath5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Black Goliath establishes himself in Los Angeles, leading a research team for Stark Industries. As Black Goliath he investigates a series of radium robberies and finds Atom-Smasher and his gang.
 </p><p>
 Guest appearance by Hank and Janet Pym, Tony Stark (Iron Man) and Luke Cage.
