--- a/index.html
+++ b/index.html
@@ -1339,6 +1339,13 @@
 </tr>
 
 <tr>
+<td>American Hustle</td>
+<td>2013</td>
+<td>Columbia</td>
+<td><a href="AmericanHustle/AmericanHustle.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American Splendor</td>
 <td>1976</td>
 <td>Dark Horse</td>
