--- a/AmericanHustle/AmericanHustle.html
+++ b/AmericanHustle/AmericanHustle.html
@@ -24,7 +24,7 @@
 <div class="mySlides" style="text-align: center;"><img src="AmericanHustle2.jpg" title="Richie"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanHustle3.jpg" title="Smells like flowers, but with garbage"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanHustle4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanHustle5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanHustle5.jpg" title="I just hope the other part of this is all good. And real. Because we're real. You *know* that. You deal with us, you're dealing with a *real* organization. We're dealing with you, we don't know what we're dealing with."></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
