--- a/AmericanHustle/AmericanHustle.html
+++ b/AmericanHustle/AmericanHustle.html
@@ -21,7 +21,7 @@
 
 <div class="mySlides" style="text-align: center;"><img src="AmericanHustle.jpg" title="Richie (Bradley), Sydney (Amy), Irving (Christian), Rosalyn (Jennifer), Carmine (Jeremy)"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanHustle1.jpg" title="Irving"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanHustle2.jpg" title="Richie"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanHustle2.jpg" title="[Richie's Mother saying grace in the background] And please help Richard to marry Diane so that I may have grandchildren, and that the Pope may have more followers."></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanHustle3.jpg" title="Smells like flowers, but with garbage"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanHustle4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanHustle5.jpg" title="I just hope the other part of this is all good. And real. Because we're real. You *know* that. You deal with us, you're dealing with a *real* organization. We're dealing with you, we don't know what we're dealing with."></div>
